--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lab4</title>
+        <title>Lab6</title>
     </head>
     <body>
-        <canvas id="webgl-canvas" width="600px" height="600px">
-        </canvas>
-
-        <canvas id="webgl-canvas2" width="600px" height="600px">
-        </canvas>
-
-        <img id = "light-img" src="src/light.png" width="0" height="0"></img>
-        <img id = "smoke-img" src="src/smoke.png" width="0" height="0"></img>
-        <img id = "fog-img" src="src/fog.png" width="0" height="0"></img>
-
-        <script src="src/gl-matrix.js"></script>
-        <script src="src/shaders.js"></script>
-        <script src="src/ps.js"></script>
-        <script src="src/main.js"></script>
+        <div>
+        <a href="spakler/sparkler.html">Sparkler</a><div></div>
+        <a href="fog/fog.html">Fog</a><div></div>
+        <a href="firework/firework.html">Firework</a><div></div>
+<!--        <a href="firework2/firework2.html">Firework2</a><div></div>-->
+        <a href="snow/snow.html">Snow</a><div></div>
+        </div>
     </body>
 </html>
