ch name of page

--- a/snow/snow.html
+++ b/snow/snow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lab4</title>
+        <title>Snow</title>
     </head>
     <body>
         <canvas id="webgl-canvas" width="800px" height="800px">
